[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/basicPlayScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://buttons/PlayAgainButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/LeaderboardButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/interface/PlayChallengeMode.gd" type="Script" id=4]
[ext_resource path="res://scripts/logic/GameOverScreen.gd" type="Script" id=5]
[ext_resource path="res://menus/util/Block.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/util/Character.tscn" type="PackedScene" id=7]

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="PlayBoard" parent="." index="1"]
margin_left = -202.898
margin_top = 48.1221
margin_right = 415.102
margin_bottom = -105.878

[node name="GameOverLabel" type="Label" parent="PlayBoard" index="1"]
margin_left = 150.0
margin_top = 20.0
margin_right = 227.0
margin_bottom = 34.0
rect_scale = Vector2( 4, 4 )
text = "Game Over!"
align = 1

[node name="HighscoreRow" type="HBoxContainer" parent="PlayBoard" index="2"]
margin_left = 25.0
margin_top = 70.0
margin_right = 93.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="PlayBoard/HighscoreRow" index="0"]
margin_top = 13.0
margin_right = 68.0
margin_bottom = 27.0
text = "Highscore:"

[node name="Score" type="Label" parent="PlayBoard/HighscoreRow" index="1"]
margin_left = 88.0
margin_top = 13.0
margin_right = 96.0
margin_bottom = 27.0
text = "0"

[node name="NewRecordLabel" type="Label" parent="PlayBoard/HighscoreRow" index="2"]
margin_left = 116.0
margin_top = 13.0
margin_right = 200.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.956863, 0.172549, 0.0431373, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "New Record!!"

[node name="TimeElapsedRow" type="HBoxContainer" parent="PlayBoard" index="3"]
margin_left = 25.0
margin_top = 125.0
margin_right = 118.0
margin_bottom = 165.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsedLabel" type="Label" parent="PlayBoard/TimeElapsedRow" index="0"]
margin_top = 13.0
margin_right = 93.0
margin_bottom = 27.0
text = "Time Elapsed: "

[node name="Time" type="Label" parent="PlayBoard/TimeElapsedRow" index="1"]
margin_left = 97.0
margin_top = 13.0
margin_right = 206.0
margin_bottom = 27.0
text = "Insert Time Here"

[node name="WorldVisitedRow" type="HBoxContainer" parent="PlayBoard" index="4"]
margin_left = 25.0
margin_top = 175.0
margin_right = 126.0
margin_bottom = 215.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldVisitedLabel" type="Label" parent="PlayBoard/WorldVisitedRow" index="0"]
margin_top = 13.0
margin_right = 94.0
margin_bottom = 27.0
text = "World Visited: "

[node name="Worlds" type="Label" parent="PlayBoard/WorldVisitedRow" index="1"]
margin_left = 98.0
margin_top = 13.0
margin_right = 257.0
margin_bottom = 27.0
text = "Insert list of worlds Here"

[node name="AverageSpeedRow" type="HBoxContainer" parent="PlayBoard" index="5"]
margin_left = 25.0
margin_top = 300.0
margin_right = 123.0
margin_bottom = 340.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AverageSpeedLabel" type="Label" parent="PlayBoard/AverageSpeedRow" index="0"]
margin_top = 13.0
margin_right = 98.0
margin_bottom = 27.0
text = "Average Speed:"

[node name="SpeedPerQn" type="Label" parent="PlayBoard/AverageSpeedRow" index="1"]
margin_left = 102.0
margin_top = 13.0
margin_right = 240.0
margin_bottom = 27.0
text = "Insert Speed/Qn here"

[node name="Header" parent="." index="2"]
position = Vector2( -439.401, -16.3245 )

[node name="RichTextLabel" parent="Header" index="0"]
text = "Gameover"

[node name="ColorRect" parent="Header/RichTextLabel" index="1"]
margin_left = -3.62763
margin_top = -1.02028
margin_right = -3.62762
margin_bottom = -1.02028

[node name="QuitButton" parent="." index="3"]
margin_left = 906.112
margin_top = 503.978
margin_right = 1008.11
margin_bottom = 591.978

[node name="LeaderBoardButton" parent="." index="4" instance=ExtResource( 3 )]
margin_left = 782.318
margin_top = 506.699
margin_right = 884.318
margin_bottom = 594.699

[node name="PlayButton" parent="." index="5" instance=ExtResource( 2 )]
margin_left = 658.524
margin_top = 508.059
margin_right = 760.524
margin_bottom = 596.059
script = ExtResource( 4 )

[node name="Block" parent="." index="7" instance=ExtResource( 6 )]
position = Vector2( 67.4558, 463.82 )

[node name="SelectedCharacter" parent="." index="8" instance=ExtResource( 7 )]
position = Vector2( 107.47, 418.994 )
[connection signal="pressed" from="LeaderBoardButton" to="." method="_on_LeaderBoardButton_pressed"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_PlayButton_pressed"]
